refactor(security): 安全路徑判空改用 StringUtils / ObjectUtils
批次 3/5:安全敏感檔案的 15 處判空。本批逐處讀過上下文再改,未做機械替換。

字串(StringUtils.isBlank,語意完全等價於 x == null || x.isBlank()):
- JwtService(3):JWT sub / role claim 缺漏、私鑰 PEM 未設定
- RefreshTokenService(3):token 查主、輪替消費、deviceInfo 正規化
- SecurityConfig(1):bearer token 抽取
- AuthController(1):refresh token 請求體
- MarketHandshakeInterceptor(1):WS 握手 ticket

集合(ObjectUtils.isEmpty,等價於 map == null || map.isEmpty()):
- RefreshTokenService(2)、SecurityConfig(1)、WebSocketAuthValidator(1)、
  WsTicketController(1)—— 皆為 Redis hash entries 的 Map<Object,Object>

額外簡化:BrowserAuthCookieProperties 的私有 isBlank helper 與 4 個
if-then-assign 區塊(12 行)改為 4 行 StringUtils.defaultIfBlank,並刪除
該 helper —— 它本就是 StringUtils 的手寫重複品。

驗證:./mvnw -pl stock-start -am verify → 80 tests, 0 failures。
安全路徑的 IT(auth cookie / CSRF / refresh / logout / WS 握手)全綠。

至此 A/B/C 三類殘留為 0。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>